# 1C_cf_cfu_merge

./: .gitattributes  .gitignore  .v8-project.example.json  LICENSE  PUBLICATION_CHECKLIST.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cfmerge/: __init__.py  app.py  bsl_merge.py  bsl_parser.py  classifier.py  cli.py  config_dump_info.py  conflicts.py  external_command_interface.py  form_command_interface.py  form_conditional_appearance.py  form_diff.py  form_events.py  form_id_allocator.py  form_identity.py  form_merge.py  form_model.py  form_properties.py  form_report.py  form_three_way_merge.py  form_validator.py  gui.py  io_utils.py  merge_engine.py  metadata_merge.py  metadata_property_merge.py  models.py  object_registry.py  progress.py  report_merge.py  reporters.py  role_rights_merge.py  scanner.py  validators.py  xml_patch.py  xml_utils.py
examples/small/: README.md
examples/small/cf/: ConfigDumpInfo.xml  Configuration.xml  ОтчетПоКонфигурации.txt
examples/small/cf/AccumulationRegisters/: РегистрНакопления1.xml
examples/small/cfu/: ConfigDumpInfo.xml  Configuration.xml  ОтчетПоКонфигурации.txt
scripts/: build-windows-exe.ps1
tests/: test_bsl_parser_merge.py  test_form_three_way_merge.py  test_gui.py  test_metadata_property_merge.py  test_p0_p1_regressions.py  test_progress.py  test_register_records_merge.py  test_regression_forms.py  test_report_merge.py  test_role_rights_merge.py
tools/: README.md
tools/1c-cf-manage/scripts/: cf-validate.ps1
tools/1c-db-ops/scripts/: db-create.ps1  db-dump-cf.ps1  db-load-xml.ps1  db-update.ps1
(+60 files in other folders)
